--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
   <string name="app_name">Hello World</string>
-  <string name="hello_world">Presentado Merkins en el Cubo!</string>
+  <string name="hello_world">Hello world!</string>
 </resources>
